# art-gens-backend

./: .env.example  .gitignore  AGENTS.md  PLAN_REFACTOR.md  TOUTELESINFOS.md  docker-compose.yml  requirements.txt
BACKUP001/backend/app/: main.py
BACKUP002/backend/: Dockerfile  requirements-3d.txt
BACKUP002/backend/app/: main.py
BACKUP002/mobile/: pubspec.yaml
BACKUP002/mobile/lib/: main.dart
app/: config.py  database.py  main.py
app/models/: piece.py  scan_event.py  user.py
app/routers/: auth.py  pieces.py
app/schemas/: auth.py  piece.py
app/services/: auth_service.py  matching_service.py
backend/: Dockerfile  Dockerfile.reconstruct  requirements.txt
backend/app/: main.py
backend/app/models/: __init__.py  egg_identity.py  egg_offer.py  notification.py  offer.py  piece.py  trade_message.py
backend/app/routers/: digit_auth.py  egg_identity.py  egg_offers.py  logs.py  messages.py  notifications.py  pieces.py  scan3d.py
backend/app/schemas/: piece.py  trade.py
backend/app/services/: digit_auth.py  mesh_compare.py  reconstruction.py  trade_service.py
docs/: CNAME  index.html
les fichiers detect/: first_scan_screen.dart  multi_angle_scan.dart  rotation_scan_screen.dart  texture_extraction.dart  texture_scan_screen.dart
mobile/: README.md  pubspec.yaml
mobile/android/colmap_ffi/: CMakeLists.txt  colmap_build.md  colmap_ffi.cpp  colmap_ffi.h
mobile/lib/: config.dart  main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
(+98 files in other folders)
